--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="primary_dark">#455A64</color>
     <color name="primary">#607D8B</color>
     <color name="accent">#FF9800</color>
+    <color name="indigo">#303F9F</color>
+    <color name="gray">#757575</color>
 </resources>
